# django-google-mailer

./: .gitignore  .pypirc  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.in  tox.ini
docs/: change.rst  conf.py  google_client_secret_sample.json  index.rst  modules.rst  quick-start.rst
gmailer/: __init__.py  apps.py  gmail.py  tests.py  urls.py  views.py
requirements/: core.txt  development.txt  docs.txt  test.txt
scripts/: version.py
test_project/: base.py  runtests.py  settings.py  urls.py  wsgi.py
