[metadata]
name = django-google-mailer
version = attr: gmailer.__version__
description = Django Package which enable Gmail API to send email inside your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikhiljohn10/django-google-mailer
author = Nikhil John
author_email = me@nikz.in
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
setup_requires =
    wheel >= 0.35.1
    setuptools >= 50.3.2
install_requires =
    Django >= 3.1.3
    google-api-python-client >= 1.12.5
    google-auth-oauthlib >= 0.4.2